# rip-zip

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY_REVIEW.md  deny.toml
.github/workflows/: ci.yml  release-tests.yml  release.yml  update-homebrew-formula.yml
crates/rip-adapters/: Cargo.toml
crates/rip-adapters/src/: error_convert.rs  file_writer.rs  lib.rs  terminal.rs  walkdir_walker.rs  zip_archiver.rs  zip_reader.rs
crates/rip-cli/: Cargo.toml
crates/rip-cli/src/: main.rs
crates/rip-cli/tests/: integration_test.rs
crates/rip-core/: Cargo.toml
crates/rip-core/src/: config.rs  error.rs  lib.rs  path_utils.rs  traits.rs  types.rs  validation.rs  zip_creator.rs  zip_extractor.rs
crates/xtask/src/: main.rs
docs/security/: extraction-threat-model.md
src/: main.rs
