[workspace]
members = ["crates/xtask", "crates/rip-core", "crates/rip-adapters", "crates/rip-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Hidari <ika5140+github@gmail.com>"]
license = "MIT"
repository = "https://github.com/hidari/rip-zip"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
