[workspace]
members = ["crates/xtask", "crates/rip-core", "crates/rip-adapters", "crates/rip-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Hidari <ika5140+github@gmail.com>"]
license = "MIT"
repository = "https://github.com/hidari/rip-zip"

[workspace.dependencies]
tempfile = "=3.27.0"
zip = "=8.4.0"
walkdir = "=2.5.0"
clap = { version = "=4.6.0", features = ["derive"] }
is-terminal = "=0.4.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
