[package]
name = "rip-zip"
version = "0.3.0"
edition = "2021"
authors = ["Hidari <ika5140+github@gmail.com>"]
description = "Handling cross-platform ZIP archives that just work everywhere."
repository = "https://github.com/hidari/rip-zip"
license = "MIT"
readme = "../../README.md"
keywords = ["zip", "compression", "cli", "cross-platform", "encoding"]
categories = ["command-line-utilities", "compression", "filesystem"]

[dependencies]
rip-core = { path = "../rip-core" }
rip-adapters = { path = "../rip-adapters" }
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14.0"
zip = "2.2.2"

[[bin]]
name = "rip"
path = "src/main.rs"
