[package]
name = "rip-zip"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "Handling cross-platform ZIP archives that just work everywhere."
repository.workspace = true
license.workspace = true
readme = "../../README.md"
keywords = ["zip", "compression", "cli", "cross-platform", "encoding"]
categories = ["command-line-utilities", "compression", "filesystem"]

[dependencies]
rip-core = { path = "../rip-core" }
rip-adapters = { path = "../rip-adapters" }
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
zip.workspace = true

[[bin]]
name = "rip"
path = "src/main.rs"
